Mon Apr 27 08:46:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst: Add details of the results of a search.

Fri Apr 24 14:05:19 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py,
	  flax/searchserver/backends/base_backend.py,
	  flax/searchserver/backends/xappy_backend.py: Basic implementation
	  of a simple search method.

Thu Apr 23 00:51:02 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* ext/__init__.py,flax/searchserver/application.py,
	  flax/searchserver/backends/__init__.py,
	  flax/searchserver/backends/base_backend.py,
	  flax/searchserver/backends/xappy_backend.py,flax/searchserver/,
	  runserver.py: Major rework; split backend specific code into
	  backends/ subdirectory.  Lots of work preparing for running the
	  indexing in a separate thread (though this isn't done yet).

Thu Apr  9 11:32:29 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
    
    * flax/searchserver/application.py: Tried returning status 201 for
      doc creation, with ID in Location field. However, this caused the
      PHP HTTP client lib to interpret it as a redirect (incorrectly).
      Since we cannot rely on correctness of all client libs, we will
      use 200 and response body for this and similar.

Wed Apr  8 16:43:23 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * flax/searchserver/schema.py: Added field delete, and got the xappy
      stuff working correctly with the PHP client unit tests.
    * flax/searchserver/application.py: Got it working correctly with 
      the PHP client unit tests.

Wed Apr 08 14:39:20 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * flax/searchserver/schema.py: added code for basic indexing/storage
    * flax/searchserver/application.py: added basic field and doc code,
      will have to be moved into writer thread.

Mon Apr 06 14:34:22 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
    